added ability to see what things about a product are especially good or bad

--- a/Preprocessing_Lemmatizing.ipynb
+++ b/Preprocessing_Lemmatizing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -12,17 +12,67 @@
      "output_type": "stream",
      "text": [
       "      Score                                               Text\n",
-      "5782      5  I was very pleased when I got these vanilla be...\n",
-      "7434      5  Wow this Chocolate Raspberry flavored coffee i...\n",
-      "8678      1  this coffee has a very funny taste to it not g...\n",
-      "4604      5  Was glad to find this procuct on line as it is...\n",
-      "8614      5  Jamican Me Crazy is the best coffee.  It is no...\n",
+      "2123      4  This freeze dried ice cream is great! It taste...\n",
+      "5779      5  I've ordered these before and I am still thril...\n",
+      "7331      5  I HAVE SO MUCH FUN WATCHING MY PUPPIES ASKING ...\n",
+      "2383      5  I am a coffee snob. Yes, I admit it. I prefer ...\n",
+      "9626      5  I like the smoked sweet paprika better than ot...\n",
+      "6193      5  I LOVE these chips.  They are addictive...it's...\n",
+      "7842      1  Wolfgang Puck recently changed their Chicken s...\n",
+      "4858      5  Newman's Own Food is one of the best on the ma...\n",
+      "6116      5  My cat suffers from bladder cysts frequently s...\n",
+      "4211      5  This product is great for pancakes. For baked ...\n",
+      "8798      5  I bought this for my son who travels often - h...\n",
+      "5855      5  I ordered a set of three cans and they showed ...\n",
+      "7225      5  The grapefruit and blackberry flavors are the ...\n",
+      "4075      1  This product was awesome the first couple mont...\n",
+      "2010      5  I bought a Belgian waffle maker sort of on a w...\n",
+      "4490      4  I purchased this tea for someone who enjoys Tr...\n",
+      "2892      5  One reviewer writes that these are Oreo cracke...\n",
+      "3489      5  I have searched for hot chocolate for my Keuri...\n",
+      "833       5  My first taste of this tea saved my trip home ...\n",
+      "7775      3  My husband says these pretzels are great and h...\n",
+      "6045      5  Raw is eating from your Organic garden of fres...\n",
+      "719       4  I love these chips and ordered them after I ha...\n",
+      "1887      4  I do love PopChips. They work well with weight...\n",
+      "1813      3  Although they are mildly healthier, they don't...\n",
+      "259       5  Had this shipped to my sister who follows a gl...\n",
+      "1585      5  When I purchased the Harmony Farms Healthy Wei...\n",
+      "7943      5  This stuff is gold for the hot/spicy food enth...\n",
+      "8832      5  This is a great product, but $21 for 2oz. Real...\n",
+      "2809      1  I ordered this Pack of 20 1-pound full leaf te...\n",
+      "3306      5  These Grove Square Hot Cocoa flavors are by fa...\n",
       "...     ...                                                ...\n",
-      "2148      5  My 8 month old loves this & has no problem hol...\n",
-      "3317      4  I recieved a Keurig K-Cup Brewer for Christmas...\n",
-      "2144      5  Plum products are such a wonderful and yummy i...\n",
-      "7575      3  I had ordered a case of this incredible soup, ...\n",
-      "5143      5  Breakfast cookies are a favorite with the youn...\n",
+      "2793      1  Tried this yesterday as a \"treat\" on a cold, r...\n",
+      "7812      4  I have tried almost every kind of \"fake meat\" ...\n",
+      "9744      5  This has a very dark chocolate flavor that mix...\n",
+      "2143      5  My daughter will start school this fall and i ...\n",
+      "3078      3  I like that this item has flax seed in it but ...\n",
+      "7450      1  This is an awful coffee. The flavor is extreme...\n",
+      "1407      5  Love this on a toasted bagel with cream cheese...\n",
+      "9253      4  This coffee was not what I expected but enjoye...\n",
+      "8082      5  This product is excellent.  Tried it one night...\n",
+      "3036      2  I love these cookies, they taste exactly like ...\n",
+      "5101      5  Great product and it tastes great.  I keep a b...\n",
+      "7417      5  This is our second time using your black winte...\n",
+      "7249      5  Snappy White Popcorn is excellent.  It pops up...\n",
+      "9691      5  I really enjoyed this, tried it with my family...\n",
+      "6547      5  I love my keurig and especially like to fix my...\n",
+      "2432      5  One of the richer coffee for k cups! We typica...\n",
+      "4021      5  these are really good, the sodium is ok based ...\n",
+      "5476      5  Great value if you buy it as a subscribe and s...\n",
+      "9084      1  Didn't realize it was flavored and thought, wh...\n",
+      "1983      5  We'll see how these work out in our family ove...\n",
+      "2275      5  After having to give up coffee years ago due t...\n",
+      "4968      1  I've tried a few of the different energy shots...\n",
+      "3625      5  The best way to get Jelly Belly... a good pric...\n",
+      "3668      1  I have never prepared anything so disgusting. ...\n",
+      "8373      5  I've tried a wide selection of k-cups includin...\n",
+      "2903      5  Nabisco knew if they didnt put little things t...\n",
+      "2555      5  Bought this as a way to take in omega 3 nutrie...\n",
+      "9770      4  I just bought a six-pack of Stephen's Gourmet ...\n",
+      "8041      5  The Butterfinger has been around since it was ...\n",
+      "321       5  Put this in my husbands stocking for Christmas...\n",
       "\n",
       "[10000 rows x 2 columns]\n"
      ]
@@ -35,20 +85,20 @@
     "\n",
     "# Loading our datafile as a DataFrame with pandas\n",
     "\n",
-    "df = pd.read_csv('Reviewss.csv', usecols=[6,9], header=0)\n",
+    "df = pd.read_csv('/Users/laniepreston/TMCI_Edits/group_assignment/FullReviews.csv' , usecols=[6,9], header=0)\n",
     "shuf_red_df = shuffle(df[:10000])\n",
     "print(shuf_red_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# PoS-tagging our dataset\n",
-    "train_df = shuf_red_df[:8000]\n",
-    "test_df = shuf_red_df[:2000]\n",
+    "train_df = shuf_red_df[:8500]\n",
+    "test_df = shuf_red_df[:1500]\n",
     "\n",
     "train_tagged = []\n",
     "test_tagged = []\n",
@@ -74,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +205,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "# Save lemmatized text to a pickle file\n",
     "pickle.dump(training_dicts, open(\"training_dicts.txt\", \"wb\"))\n",
     "pickle.dump(test_dicts, open(\"test_dicts.txt\", \"wb\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -181,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
