--- a/Machine learning (3) with positivity and negativity scores.ipynb
+++ b/Machine learning (3) with positivity and negativity scores.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Machine learning with positivity and negativity scores\n",
+    "\n",
+    "This notebook contains a Naive Bayes model trained on the positivity and negativity scores per review."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +28,7 @@
     "from nltk.corpus import wordnet as wn \n",
     "import operator \n",
     "\n",
+    "#importing the test and train dataset\n",
     "with open('test_dicts.txt', 'rb') as file:\n",
     "    test_lemmedreviews = pickle.load(file)\n",
     "    \n",
@@ -28,13 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "mapping = {'NOUN':wn.NOUN, \"ADJ\": wn.ADJ, 'VERB' : wn.VERB, \"ADV\": wn.ADV}\n",
     "\n",
     "def find_senti(lst):\n",
+    "    \"\"\"Finds the positivity and negativity score per review\"\"\"\n",
     "    avg_review = []\n",
     "    for sublist in lst:\n",
     "        avg_positivity, avg_negativity, total_words = 0, 0, 0\n",
@@ -43,7 +54,6 @@
     "        for word in sublist:\n",
     "            #split item into individual word and lemma \n",
     "            trunc_word = word.split(\"-\")\n",
-    "            #TODO: handle negation!! this is a band-aid  \n",
     "            if trunc_word[1] not in mapping:\n",
     "                continue\n",
     "            #get the right part of speech from predefined mapping\n",
@@ -63,15 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#For all reviews in the training set find their positivity and negativity scores\n",
     "all_scores=[]\n",
-    "\n",
     "for i in range(1,6): \n",
     "    all_scores += find_senti(train_lemmedreviews[i])\n",
-    "    \n",
+    " \n",
+    "#Create the label vector\n",
     "labelsVec = np.zeros((sum([len(v) for v in train_lemmedreviews.values()])))\n",
     "docId = 0\n",
     "for score in range(1, 6):\n",
@@ -82,27 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8000"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(all_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,22 +102,24 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Create the model based on the positivity and negativity scores\n",
     "clf = naive_bayes.MultinomialNB()\n",
     "clf.fit(all_scores, labelsVec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create the test scores and the golden standard\n",
     "all_scores_test=[]\n",
     "for i in range(1,6): \n",
     "    all_scores_test += find_senti(test_lemmedreviews[i])   \n",
@@ -141,44 +134,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 1. 1. ... 5. 5. 5.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "len(all_scores_test)\n",
-    "print(goldStandard)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create a prediction\n",
     "predicted = clf.predict(all_scores_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.621\n",
+      "accuracy: 0.6115\n",
       "precision: 0.2\n",
-      "recall: 0.1242\n",
-      "f1-measure: 0.15323874151758174\n"
+      "recall: 0.1223\n",
+      "f1-measure: 0.15178405212534907\n"
      ]
     },
     {
@@ -201,13 +177,6 @@
     "print(\"recall:\", metrics.recall_score(predicted, goldStandard, average='macro'))\n",
     "print(\"f1-measure:\", metrics.f1_score(predicted, goldStandard, average='macro'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
